# poly-triang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_test.csv  check_mono.py  debug_algo.py  debug_faces.py  debug_intersection.py  fix_left_edge.py  generate_figure.py  run_benchmark.bat  run_benchmark.sh  theory_splay_final.tex
baselines/: CMakeLists.txt
baselines/include/: polygon_io.hpp
baselines/src/: cgal_polygon_cli.cpp  polytri_cli.cpp
experiments/bucket/: algorithm.tex  results_table.tex
experiments/linear_research/: ANALYSIS.md  FINAL_RECOMMENDATION.md
experiments/method_persistent_chains/: theory.tex  triangulate.py  triangulate_v2.py
experiments/method_reflex_graph/: theory.tex  triangulate.py
experiments/reflex/: BRAINSTORM_BREAKTHROUGH.md  BRAINSTORM_LINEAR.md  BRAINSTORM_NEW.md  BRAINSTORM_SPLAY.md  BRAINSTORM_TRUE_N_RLOGR.md  algorithm.tex  benchmark_full.py  brainstorm_n_plus_rlogr.md  design_true_n_plus_rlogr.md  methods_table.tex  results_table.tex  stress_test_splay.py  theory.tex  theory_agr.tex  theory_chain_fusion.tex  theory_rigorous.tex  theory_splay.tex  triangulate_agr.py  triangulate_bucket.py  triangulate_bucket_v2.py  triangulate_bucket_v3.py  triangulate_chain_fusion.py  triangulate_chains.py  triangulate_chunked.py  triangulate_divconq.py  triangulate_ear_reflex.py  triangulate_final.py  triangulate_grid.py  triangulate_linear.py  triangulate_linear_rotation.py  triangulate_n_plus_rlogr.py  triangulate_n_plus_rlogr_v2.py  triangulate_rigorous.py  triangulate_seidel.py  triangulate_simple.py  triangulate_v2.py
experiments/universal/: algorithm.tex  polygon_types_table.tex  theory.tex
experiments/visibility/: SUMMARY.md  algorithm.tex
legacy/: CMakeLists.txt
legacy/include/: seidel.h
legacy/src/: cgal_gen_cli.cpp  earcut_cli.cpp  polygon_io.cpp  polypartition_hm_cli.cpp  polypartition_mono_cli.cpp  polytri_cli.cpp  seidel_cli.c
methods/: CMakeLists.txt  test_paper.cpp  test_reflex_triangulate.cpp  test_tri  test_tri.cpp
methods/include/: bucket_triangulation.hpp  reflex_chain_triangulate.hpp  reflex_chord.hpp  reflex_fast_linked.hpp  reflex_optimal.hpp  reflex_triangulate.hpp  reflex_triangulation.hpp
methods/src/: bucket_cli.cpp  reflex_cli.cpp
note/: check_adj.py  check_angles.py  check_mono.py  check_pts.py  check_pts2.py  check_tris.py  check_v6.py  debug_algo.py  debug_comb.py  debug_comb2.py  debug_faces.py  debug_mono_tri.py  debug_star7.py  debug_star7b.py  debug_test.py  debug_tri.py  note.tex  paper.tex  run_test.py  test_all_faces.py  test_comprehensive.py  test_debug.py  test_face.py  test_faces2.py  test_faces3.py  test_full.py  trace_face.py  trace_face_ext.py  trace_mono.py  triangulation.py  verify_correct.py
note/figures/: algorithm_steps.tex
paper/: README.md  benchmark.py  benchmark_table.tex  email.txt  original_paper.txt  paper.tex  reflex_triang.tex  results.txt  scaling_table.tex  submission.tex  triangulation_note.tex  update_seidel_only.py
paper/CGAT/: .gitignore  AUDIT.md  build.sh  check_diagonal_validity.py  cover_letter.md  cover_letter.tex  cover_letter_plain.txt  reproduce.sh  run_test.sh  submission.aux  submission.out  submission.tex
paper/CGAT/code/: README.md
paper/CGAT_old/: build.sh  cover_letter.md  reproduce.sh  submission.tex
paper/CGATv2/: .gitignore  AUDIT.md  build.sh  reproduce.sh  submission.tex
paper/CGATv2/code/baselines/polytri/example/: CMakeLists.txt
paper/brainstorm/: achieving_n_plus_klogk.md  diagonal_bug.md
paper/code/: test  test_paper
paper/legacy/: INSTRUCTIONS.md  README.md  benchmark.py  benchmark_root.py  email.txt  generate_tables.py  new_draft.tex  og_reflex.tex  repro_fail_instance.py  results.txt  submission.tex  test_correctness.py  triangulation.py
paper/simple_klogk/: .gitignore  draft.tex
polygons/benchmark/: cgal_random_1000_s1.poly  cgal_random_1000_s2.poly  cgal_random_1000_s3.poly  cgal_random_100_s1.poly  cgal_random_100_s2.poly  cgal_random_100_s3.poly  cgal_random_2000_s1.poly  cgal_random_2000_s2.poly  cgal_random_500_s1.poly  cgal_random_500_s2.poly  cgal_random_500_s3.poly  convex_100.poly  convex_10000.poly  convex_2000.poly  convex_20000.poly  convex_500.poly  convex_5000.poly  convex_50000.poly  random_100.poly  random_10000.poly  random_20000.poly  random_500.poly  random_5000.poly  random_50000.poly  spiral_100.poly  spiral_10000.poly  spiral_2000.poly  spiral_20000.poly  spiral_500.poly  spiral_5000.poly  spiral_50000.poly  star_100.poly  star_1000.poly  star_10000.poly  star_2000.poly  star_20000.poly  star_500.poly  star_5000.poly  star_50000.poly
polygons/tmp_fail/: convex_1000.poly  convex_1100.poly  convex_1200.poly  convex_1300.poly  convex_1400.poly  convex_1500.poly  convex_1600.poly  convex_1700.poly  convex_1800.poly  convex_1900.poly  random_1000.poly  random_1100.poly  random_1200.poly  random_1300.poly  random_1400.poly  random_1500.poly  random_1600.poly  random_1700.poly  random_1800.poly  random_1900.poly  random_2000.poly  spiral_1000.poly  spiral_1100.poly  spiral_1200.poly  spiral_1300.poly  spiral_1400.poly  spiral_1500.poly  spiral_1600.poly  spiral_1700.poly  spiral_1800.poly  spiral_1900.poly  star_1100.poly  star_1200.poly  star_1300.poly  star_1400.poly  star_1500.poly  star_1600.poly  star_1700.poly  star_1800.poly  star_1900.poly
publication/: algorithm.tex  complexity_analysis.txt  methods_table.tex
results/: benchmark_results.csv  bucket_benchmark.csv  cpp_benchmark.csv  final_benchmark.csv  final_correct_benchmark.csv  final_summary.csv  methods_benchmark.csv  quick_benchmark_raw.csv  rigorous_benchmark.csv  statistical_benchmark.csv
scripts/: baseline.sh  benchmark_bucket.sh  benchmark_cpp.sh  benchmark_methods.sh  benchmark_paper.py  benchmark_rigorous.sh  check_polygon.py  generate_polygons.py  paper_benchmark.sh  quick_bench.sh  quick_paper_bench.sh  run_earclip_naive.py  run_garey.py  run_hertel.py  visualize.py  visualize_bucket.py  visualize_methods.py  visualize_rigorous.py
survey/: jocg.tex  survey.tex  ШпагінПавло_СтаттяV2.txt
(+21397 files in other folders)
